--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,22 +19,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@src/*": ["./*"],
+      "@components/*": ["components/*"]
+    }
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }],
-  "paths": {
-    "crypto": [
-      "./node_modules/crypto-browserify"
-    ],
-    "stream": [
-      "./node_modules/stream-browserify"
-    ],
-    "@src": [
-      "./*"
-    ],
-    "@components/*": [
-      "components/*"
-    ],
-  }
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
