--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,9 @@ name: Build and Deploy to gh-pages
 on:
   push:
     branches:
-      - master  # Replace with your main branch name
+      - master # Replace with your main branch name
 
-variables: 
+env:
   OUTPUT_DIR: docs
 
 jobs:
@@ -26,4 +26,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: $OUTPUT_DIR  # Specify your build output directory
+          publish_dir: ${{ env.OUTPUT_DIR }}
