--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PAT }}" > ~/.npmrc
           echo "@OWNER:registry=https://npm.pkg.github.com" >> ~/.npmrc
+        env:
+          OWNER: danielgroen
 
       - name: Install dependencies
         run: npm ci
