--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,22 +17,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14" # Adjust the Node.js version as needed
-
-      - name: Set up .npmrc
-        run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PAT }}" > ~/.npmrc
-          echo "registry=https://registry.npmjs.org" >> ~/.npmrc
-          echo "always-auth=true" >> ~/.npmrc
-
-      - name: Replace token in package.json
-        run: sed -i "s|https://<GH_PAT>:x-oauth-basic@github.com/tradingview/charting_library.git|https://${{ secrets.GH_PAT }}:x-oauth-basic@github.com/tradingview/charting_library.git|g" package.json
-
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build project
         run: npm run build
