--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,1 @@
-registry=https://registry.npmjs.org/
-@tradingview:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${{ secrets.GH_PAT }}
+//registry.npmjs.org/:_authToken=${{secrets.GITHUB_TOKEN}}
