--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
           token: ${{ secrets.GH_PAT }} # Use the PAT for authentication
 
       - name: Create .npmrc
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_PAT }}" >> .npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=${GH_PAT}" >> .npmrc
 
       - name: Install dependencies
         run: npm ci
@@ -31,6 +31,5 @@ jobs:
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_PAT }} # Use the PAT for authentication
           publish_dir: ${{ env.OUTPUT_DIR }}
-#
