--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Create .npmrc
-        run: echo "//npm.pkg.github.com/:_authToken=${GH_PAT}" >> .npmrc
+      # - name: Create .npmrc
+      #   run: echo "//npm.pkg.github.com/:_authToken=${GH_PAT}" >> .npmrc
 
       - name: Clear npm cache
         run: npm cache clean --force
