--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "ccxt": "^4.3.44",
     "charting_library": "github:tradingview/charting_library",
     "crypto-browserify": "^3.12.0",
+    "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-copy": "^3.5.0",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.4",
@@ -27,13 +29,25 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "fetch": "^1.1.0",
     "http-proxy-agent": "^7.0.2",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
     "react-icons": "^5.2.1",
+    "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-node-polyfills": "^0.22.0",
