--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "fetch": "^1.1.0",
     "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.4",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "react-icons": "^5.2.1",
+    "socks-proxy-agent": "^8.0.3",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
