--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-copy": "^3.5.0",
+    "socket.io-client": "^4.7.5",
     "stream-browserify": "^3.0.0",
     "zustand": "^4.5.2"
   },
