--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "charting_library": "github:tradingview/charting_library",
     "crypto-browserify": "^3.12.0",
     "immer": "^10.1.1",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-copy": "^3.5.0",
